--- a/src/main/resources/application-test2.yml
+++ b/src/main/resources/application-test2.yml
@@ -2,8 +2,8 @@ spring:
   datasource:
     driver-class-name: org.postgresql.Driver
     url: "jdbc:postgresql://37.230.114.27:5432/postgres"
-    username: postgres
-    password: qwerty123
+    username: hex
+    password: _279543
   jpa:
     open-in-view: true
     properties:
@@ -14,3 +14,4 @@ spring:
     hibernate:
       ddl-auto: create
 path-jpg: "/opt/uni3.jpg"
+amountOfImagesOnServer: 0
