--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,9 +1,24 @@
 spring:
+  cloud:
+    vault:
+      host: localhost
+      port: 8200
+      scheme: http
+      authentication: CUBBYHOLE
+      token: s.geHKtzTBaAU7SmqPMfBuNgXB
+      kv:
+        enabled: false
+      database:
+        enabled: true
+        backend: database
+        username-property: spring.datasource.username
+        password-property: spring.datasource.password
+  config.import: vault://
   datasource:
     driver-class-name: org.postgresql.Driver
     url: "jdbc:postgresql://${DB_URL}:5432/${DB_NAME}"
-    username: ${DB_USERNAME}
-    password: ${DB_PASSWORD}
+#    username: ${DB_USERNAME}
+#    password: ${DB_PASSWORD}
   jpa:
     open-in-view: true
     properties:
@@ -12,5 +27,5 @@ spring:
         enable_lazy_load_no_trans: true
         current_session_context_class: thread
     hibernate:
-      ddl-auto: create
+      ddl-auto: none
 path-jpg: "D:\\фото\\uni3.jpg"
