--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -2,8 +2,8 @@ spring:
   datasource:
     driver-class-name: org.postgresql.Driver
     url: "jdbc:postgresql://37.230.114.27:5432/postgres"
-    username: postgres
-    password: qwerty123
+#    username: postgres
+#    password: qwerty123
   jpa:
     open-in-view: true
     properties:
@@ -12,5 +12,5 @@ spring:
         enable_lazy_load_no_trans: true
         current_session_context_class: thread
     hibernate:
-      ddl-auto: create
+      ddl-auto: none
 path-jpg: "/opt/uni3.jpg"
